Add fallback favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Kreative Talks und Workshops, off-topic versteht sich" />
         <meta name="keywords" content="Talks,Workshops,KA,Karlsruhe" />
         <meta name="author" content="Daniel Hofmann,Marco Neumann" />
-        <link id="favicon" rel="icon" type="image/png" />
+        <link id="favicon" rel="icon" type="image/png" href="favicon.png" />
         <link href="css/normalize.css" rel="stylesheet" type="text/css" />
         <link href="css/fontello.css" rel="stylesheet" type="text/css" />
         <style type="text/css" media="screen">
